--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 
 <h3><li> <a href="Favorite Movie.html">Favorite Movie Project</a></li></a>
 
-<img src="./Images/Favorite Move Project Screenshot 2025-01-16 122704.png"height=250></li>
+<img src="./Images/Favorite Movie Project Image.png"height=250></li>
 
 
 <li><h3><a href="Favorite Things.html">Favorite Things</a></h3></li>
-  <img src="Images/Favorite Things Screenshot 2025-01-19 103532.png" height=250>
+  <img src="./Images/Favorite Things Image.png" height=250>
   
   <li><h3><a href="Kim Birthday Invite.html">Kim Birthday Invite Project </a></li>
-    <img src="Images/Kim Birthday Invite Screenshot 2025-01-16 123815.png"height=250>
+    <img src="./Images/Birthday Invite Image.png"height=250>
     <hr />
 
 <a href="About Me.html">About Me</a>
